# SpiceyPy

./: .cirrus.yml  .gitignore  .pep8speaks.yml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  .zenodo.json  0001-patch-for-n66-dskx02.c-windows.patch  0001-patch-for-n66-dskx02.c.patch  0002-patch-for-n66-subpnt.c-windows.patch  0002-patch-for-n66-subpnt.c.patch  0004_inquire_unistd.patch  CHANGELOG.md  CITATION.cff  CMakeInit.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README  README.md  README.rst  appveyor.yml  build_cyice.py  build_spiceypy.py  ci-requirements.txt  cspice.def  get_spice.py  getspice.py  gettestkernels.py  makeDynamicSpice.bat  paper.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  spiceConcurrentCall_test.py  test-requirements.txt
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cff-validator.yml  ci-build.yml  dependabot.yml  publish-to-test-and-live-pypi.yml  publish-to-test-pypi.yml
SpiceyPy/: SpiceCell.py  SpiceCommands.py  SpiceConst.py  SpiceConvert.py  SpiceCoord.py  SpiceDAF.py  SpiceDAS.py  SpiceEllipse.py  SpiceErrors.py  SpiceHelpers.py  SpiceKernel.py  SpiceMatrix3D.py  SpicePlane.py  SpicePool.py  SpiceQuat.py  SpiceVector.py  SpiceVector3D.py  SupportTypes.py  __init__.py  libspice.py  support_types.py  wrapper.py
SpiceyPy/test/: __init__.py  gettestkernels.py  test_wrapper.py
Tests/: exampleProgramTest.py  testCassiniTrajectory.py  testCell.py  testConstants.py  testErrors.py  testMatrix.py  testMetaK.txt  testNewTypes.py  testPlanes.py  testPointers.py  testQuat.py  testStrings.py  testVectors.py  test_wrapper.py
Tests/old/: testEK.py
appveyor/: bld.bat  cspice.def  install_numpy.ps1  makeDynamicSpice.bat  meta.yaml
docs/: Makefile  SpiceyPy.rst  abcorr.rst  basics.rst  binary_pck.rst  cells.rst  citation.rst  ck.rst  conf.py  contextmanager.md  contextmanager.rst  cyice.rst  documentation.rst  ellipses.rst  environment.yml  event_finding.rst  exampleone.rst  exceptions.rst  extra_features.rst  frames.rst  index.rst  insitu_sensing.rst  installation.rst  kernel.rst  lessonindex.rst  make.bat  multithread.rst  naif_ids.rst  other_stuff.rst  pck.rst  planes.rst  pyodide.rst  pyscript.json  pyscript_binary_pck.json  pyscript_cassini_example.json  pyscript_editor.py  pyscript_event_finding.json  pyscript_insitu_sensing.json  pyscript_min.json  pyscript_other_stuff.json  (+6 more)
docs/_static/css/: pyscript_editor.css
docs/scripts/binary_pck/: erotat.py  erotat_make_mk.py  mrotat.py  mrotat_make_mk.py
docs/scripts/event_finding/: viewpr.py  viewpr_make_mk.py  visibl.py  visibl_make_mk.py
docs/scripts/insitu_sensing/: convrt.py  convrt_make_mk.py  getsta.py  getsta_make_mk.py  sclket.py  sclket_make_mk.py  scvel.py  scvel_make_mk.py  soldir.py  soldir_make_mk.py  sscpnt.py  sscpnt_make_mk.py
docs/scripts/other_stuff/: aderr.py  coord.py  kervar.py  kervar_make_mk.py  kpool.py  kpool_generic_make_mk.py  kpool_make_mk.py  units.py  win.py  xconst.py  xtic.py
docs/scripts/remote_sensing/: convtm.py  convtm_make_mk.py  fovint.py  fovint_make_mk.py  getsta.py  getsta_make_mk.py  subpts.py  subpts_make_mk.py  xform.py  xform_make_mk.py
joss/: codemeta.json  paper.bib  paper.md
spiceypy/: __init__.py  config.py  context.py  libspice.py  spiceypy.py  support_types.py  wrapper.py
spiceypy/tests/: __init__.py  ex_dasac.das  gettestkernels.py  make_de405s_native.py  test_context.py  test_gettestkernels.py  test_spiceerrors.py  test_support_types.py  test_wrapper.py
spiceypy/utils/: __init__.py  callbacks.py  decorators.py  exception_lookups.py  exceptions.py  libspicehelper.py  new_errors.txt  old_spice_error_list.txt  old_spice_error_list_sorted.txt  spice_error_list.txt  spice_error_list_incfiles.txt  support_types.py
src/cyice/: build_cyice.py  cyice.pxd  cyice.pyx
src/spiceypy/: __init__.py  config.py  found_catcher.py  spiceypy.py
src/spiceypy/benchmarks/: test_cyice.py
src/spiceypy/cyice/: __init__.py  cyice.pxd  cyice.pyx
src/spiceypy/tests/: __init__.py  gettestkernels.py  test_context_manager.py  test_cyice.py  test_gettestkernels.py  test_imports.py  test_logging.py  test_spiceerrors.py  test_support_types.py  test_wrapper.py
src/spiceypy/utils/: callbacks.py  exceptions.py  libspicehelper.py  support_types.py
test/: exampleProgramTest.py  gettestkernels.py  testCharArrays.py  testKernels.py  testKernels.txt  testNewTypes.py  testPlanes.py  testPointers.py  testStrings.py  testTime.py  testVectors.py  testWindow.py  test_spiceerrors.py  test_support_types.py  test_wrapper.py
