[build-system]
requires = ["scikit-build-core", "cython>=3.1", "numpy>=2.0,<3"]
build-backend = "scikit_build_core.build"

[project]
name = "spiceypy"
dynamic = ["version"]
license = "MIT"
license-files = ["LICENSE"]
description = "A Python Wrapper for the NAIF CSPICE Toolkit"
requires-python = ">=3.10"
readme = {file = "README.rst", content-type = "text/x-rst"}
keywords = ["spiceypy", "spice", "cspice", "naif", "jpl", "space", "geometry", "ephemeris"]
classifiers = [
     "Development Status :: 5 - Production/Stable",
     "Natural Language :: English",
     "Topic :: Scientific/Engineering",
     "Topic :: Scientific/Engineering :: Astronomy",
     "Programming Language :: Python :: 3 :: Only",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
     "Programming Language :: Cython",
     "Operating System :: MacOS :: MacOS X",
     "Operating System :: POSIX :: Linux",
     "Operating System :: POSIX :: BSD :: FreeBSD",
     "Operating System :: Microsoft :: Windows",
]
dependencies = ["numpy>=1.23.5"]

[[project.authors]]
name = "Andrew M. annex"
email = "ama6fy@virginia.edu"

[[project.maintainers]]
name = "Andrew M. annex"
email = "ama6fy@virginia.edu"


[dependency-groups]
core = [
    "numpy>=1.23.5", 
]
test = [
    {include-group = "core"},
    "pytest>=7.0.0", 
    "pandas>=2.2.2",
    "pytest-benchmark"
]
publish = [
    "twine>=6.1.0"
]
ci = [
    {include-group = "core"},
    {include-group = "publish"},
    "coverage>=7.0.0",
    "certifi", 
    "black"
]
build = [
    {include-group = "core"},
    "build",
    "scikit-build-core",
    "Cython>=3.0.12",
]
dev = [
    {include-group = "build"},
    {include-group = "test"},
    {include-group = "ci"},
]
devwheel = [
    {include-group = "dev"},
    "cibuildwheel",
]
doc = [
    {include-group = "dev"},
    "myst-parser==2.0.0",
    "docutils",
    "graphviz",
    "sphinx<=7.0.0",
    "sphinx-copybutton",
    "sphinx-autodoc-typehints",
    "sphinx_rtd_theme",
    "recommonmark"
]

[project.urls]
"Homepage"      = "https://github.com/AndrewAnnex/SpiceyPy"
"Repository"    = "https://github.com/AndrewAnnex/SpiceyPy"
"Source"        = "https://github.com/AndrewAnnex/SpiceyPy"
"Conda-Forge"   = "https://anaconda.org/conda-forge/spiceypy"
"Documentation" = "https://spiceypy.readthedocs.io"
"Bug Tracker"   =  "https://github.com/AndrewAnnex/SpiceyPy/issues"
"Changelog"     = "https://github.com/AndrewAnnex/SpiceyPy/blob/main/CHANGELOG.md"

[tool.scikit-build]
logging.level = "INFO"
cmake.build-type = "Release"

# TODO probably will want to consider excluding tests due to changing standards
sdist.include = [
    "src/spiceypy/*.py",
    "src/spiceypy/benchmarks/*.py",
    "src/spiceypy/test/*.py",
    "src/spiceypy/utils/*.py",
    "src/spiceypy/cyice/*.pyx",
]
sdist.exclude = [
    ".github",
    "*.lib",
    "*.cmake",
    "**/*.cmake",
    "spiceypy/cyice/*.pyd",
    "spiceypy/cyice/*.lib",
    "spiceypy/cyice/*.c",
    "spiceypy/utils/cmake/",
    "spiceypy/utils/cmake/cspice/",
    "spiceypy/utils/cmake/cspice/*.cmake"
]
wheel.exclude = [
    "*.a",
    "*.lib",
    "**/*.lib",
    "*.cmake",
    "**/*.cmake",
    "spiceypy/cyice/*.c",
    "spiceypy/cyice/*.lib",
    "spiceypy/utils/cmake/",
    "**/spiceypy/utils/cmake/",
    "spiceypy/utils/cmake/cspice/",
    "spiceypy/utils/cmake/cspice/*.cmake"
]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "src/spiceypy/__init__.py"


# pytest things
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--benchmark-autosave"
markers = [
    "optional: mark tests as optional"
]

# cython lint things
[tool.cython-lint]
max-line-length = 180
ignore = ["E221", "E125"]

# coverage things
[tool.coverage.run]
relative_files = true

[tool.coverage.paths]
source = [
    "src/spiceypy/",
    "work/SpiceyPy/SpiceyPy/",
]


# all CI build wheel stuff goes here
[tool.cibuildwheel]
# Specify Python Versions to build
build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*"]
# Skip 32-bit builds, pypy, and musllinux
skip = ["*-win32", "*-manylinux_i686", "*-musllinux_i686", "*-musllinux_aarch64", "*-musllinux_x86_64"]
# build options
build-verbosity = 2
# parallel builds passthrough for build
environment-pass = ["CMAKE_BUILD_PARALLEL_LEVEL"]
test-groups = ["devwheel"]
test-command = [
    "coverage run --source spiceypy -m pytest --pyargs spiceypy --benchmark-disable"
]
