[build-system]
requires = ["scikit-build-core", "cython>=3.1", "numpy>=2.0,<3"]
build-backend = "scikit_build_core.build"

[project]
name = "spiceypy"
dynamic = ["version"]
license = "MIT"
license-files = ["LICENSE"]
description = "A Python Wrapper for the NAIF CSPICE Toolkit"
requires-python = ">=3.10"
readme = {file = "README.rst", content-type = "text/x-rst"}
keywords = ["spiceypy", "spice", "cspice", "naif", "jpl", "space", "geometry", "ephemeris"]
classifiers = [
     "Development Status :: 5 - Production/Stable",
     "Natural Language :: English",
     "Topic :: Scientific/Engineering",
     "Topic :: Scientific/Engineering :: Astronomy",
     "Programming Language :: Python :: 3 :: Only",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
     "Programming Language :: Python :: 3.14",
     "Programming Language :: Cython",
     "Operating System :: MacOS :: MacOS X",
     "Operating System :: POSIX :: Linux",
     "Operating System :: POSIX :: BSD :: FreeBSD",
     "Operating System :: Microsoft :: Windows",
]
dependencies = ["numpy>=1.23.5"]

[[project.authors]]
name = "Andrew M. annex"
email = "ama6fy@virginia.edu"

[[project.maintainers]]
name = "Andrew M. annex"
email = "ama6fy@virginia.edu"


[dependency-groups]
core = [
    "numpy>=1.23.5", 
]
test = [
    {include-group = "core"},
    "pytest>=7.0.0", 
    "pandas>=2.2.2",
    "pytest-benchmark"
]
publish = [
    "twine>=6.1.0"
]
ci = [
    {include-group = "core"},
    {include-group = "publish"},
    "coverage>=7.0.0",
    "certifi", 
    "black"
]
build = [
    {include-group = "core"},
    "build",
    "scikit-build-core",
    "Cython>=3.0.12",
]
dev = [
    {include-group = "build"},
    {include-group = "test"},
    {include-group = "ci"},
]
devwheel = [
    {include-group = "dev"},
    "cibuildwheel>=4.1.0",
]
devwheelpyodide = [
    {include-group = "devwheel"},
    "pytest-randomly",
    "pyodide-http",
    "requests"
]
doc = [
    {include-group = "dev"},
    "myst-parser==2.0.0",
    "docutils",
    "graphviz",
    "sphinx<=7.0.0",
    "sphinx-copybutton",
    "sphinx-autodoc-typehints",
    "sphinx_rtd_theme",
    "recommonmark"
]

[project.urls]
"Homepage"      = "https://github.com/AndrewAnnex/SpiceyPy"
"Repository"    = "https://github.com/AndrewAnnex/SpiceyPy"
"Source"        = "https://github.com/AndrewAnnex/SpiceyPy"
"Conda-Forge"   = "https://anaconda.org/conda-forge/spiceypy"
"Documentation" = "https://spiceypy.readthedocs.io"
"Bug Tracker"   =  "https://github.com/AndrewAnnex/SpiceyPy/issues"
"Changelog"     = "https://github.com/AndrewAnnex/SpiceyPy/blob/main/CHANGELOG.md"

[tool.scikit-build]
logging.level = "INFO"
cmake.build-type = "Release"

# TODO probably will want to consider excluding tests due to changing standards
sdist.include = [
    "src/spiceypy/*.py",
    "src/spiceypy/benchmarks/*.py",
    "src/spiceypy/test/*.py",
    "src/spiceypy/utils/*.py",
    "src/spiceypy/cyice/*.pyx",
]
sdist.exclude = [
    ".github",
    "*.lib",
    "*.cmake",
    "**/*.cmake",
    "spiceypy/cyice/*.pyd",
    "spiceypy/cyice/*.lib",
    "spiceypy/cyice/*.c",
    "spiceypy/utils/cmake/",
    "spiceypy/utils/cmake/cspice/",
    "spiceypy/utils/cmake/cspice/*.cmake"
]
wheel.exclude = [
    "*.a",
    "*.lib",
    "**/*.lib",
    "*.cmake",
    "**/*.cmake",
    "spiceypy/cyice/*.c",
    "spiceypy/cyice/*.lib",
    "spiceypy/utils/cmake/",
    "**/spiceypy/utils/cmake/",
    "spiceypy/utils/cmake/cspice/",
    "spiceypy/utils/cmake/cspice/*.cmake"
]

# The cyice extension is not compiled for Emscripten/Pyodide (see CMakeLists.txt
# `if(NOT DEFINED EMSCRIPTEN)`), so exclude its Cython sources/annotations from the
# pyodide wheel since there is no compiled module to accompany them. We can't use
# `if.platform-system = "emscripten"` here: during cross-compilation scikit-build-core
# sees the host's sys.platform (linux), not the wasm target. Instead we key off the
# SPICEYPY_PYODIDE env var set in [tool.cibuildwheel.pyodide].environment below.
[[tool.scikit-build.overrides]]
if.env.SPICEYPY_PYODIDE = true
inherit.wheel.exclude = "append"
wheel.exclude = [
    "spiceypy/cyice/*.pyx",
    "spiceypy/cyice/*.pxd",
    "spiceypy/cyice/*.html",
    # the only benchmark targets cyice, which isn't built for pyodide
    "spiceypy/benchmarks/*",
]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "src/spiceypy/__init__.py"


# pytest things
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--benchmark-autosave"
markers = [
    "optional: mark tests as optional"
]


# cython lint things
[tool.cython-lint]
max-line-length = 180
ignore = ["E221", "E125"]

# coverage things
[tool.coverage.run]
relative_files = true

[tool.coverage.paths]
source = [
    "src/spiceypy/",
    "work/SpiceyPy/SpiceyPy/",
]


# all CI build wheel stuff goes here
[tool.cibuildwheel]
build-frontend = 'build[uv]'
# Specify Python Versions to build
build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*", "cp314-*"]
# Skip 32-bit builds, pypy, and musllinux
skip = ["*-win32", "*-manylinux_i686", "*-musllinux_i686", "*-musllinux_aarch64", "*-musllinux_x86_64"]

# build options
build-verbosity = 2
# parallel builds passthrough for build
environment-pass = ["CMAKE_BUILD_PARALLEL_LEVEL"]
test-groups = ["dev"]
test-command = [
    "coverage run --source spiceypy -m pytest --pyargs spiceypy --benchmark-disable"
]

# Build CSPICE once per cibuildwheel run instead of once per Python version.
# CSPICE is ~2200 C files and has no Python dependency whatsoever, so rebuilding
# it for every wheel was the single largest cost in the build_wheels jobs. This
# installs it into {project}/cspice-prefix; the per-wheel builds then pick it up
# via SPICEYPY_CSPICE_PREFIX (set in the workflow) and vendor the resulting
# shared library into the wheel exactly as the in-tree build did.
#
# The install prefix is passed via `cmake --install --prefix` rather than
# -DCMAKE_INSTALL_PREFIX so the value is never parsed as CMake language -- on
# Windows {project} expands to a backslashed path.
# `--config Release` is a no-op for single-config generators and correct for the
# multi-config ones, so the same commands work everywhere.
before-all = [
    "cmake -S {project} -B {project}/build-cspice -DSPICEYPY_CSPICE_ONLY=ON -DCMAKE_BUILD_TYPE=Release",
    "cmake --build {project}/build-cspice --config Release",
    "cmake --install {project}/build-cspice --config Release --prefix {project}/cspice-prefix",
]

[tool.cibuildwheel.linux]
# Same as the shared before-all above, but the manylinux images do not ship
# cmake. cibuildwheel prepends /opt/python/cp39-cp39/bin to PATH for before_all,
# so a pip is always available to bootstrap one (plus ninja, which CMake picks
# over make automatically once present).
before-all = [
    "command -v cmake >/dev/null 2>&1 || pip install --quiet cmake ninja",
    "cmake -S {project} -B {project}/build-cspice -DSPICEYPY_CSPICE_ONLY=ON -DCMAKE_BUILD_TYPE=Release",
    "cmake --build {project}/build-cspice --config Release",
    "cmake --install {project}/build-cspice --config Release --prefix {project}/cspice-prefix",
]

[tool.cibuildwheel.windows]
build-frontend = 'build[uv]'
repair-wheel-command = "delvewheel repair --ignore-in-wheel -w {dest_dir} {wheel}"

[tool.cibuildwheel.pyodide]
build-frontend = 'build'
# Explicitly opt out of the shared before-all CSPICE prebuild. Pyodide builds a
# single wheel, so there is nothing to amortise, and the prebuild would produce
# a *host* library that an Emscripten cross-compile cannot link against anyway.
# Pyodide keeps building CSPICE in-tree via FetchContent.
before-all = ""
# https://github.com/jupyterlite/pyodide-kernel for version/kernel compatibility
build = ["cp314-*"]
skip  = ["cp312-*"]
test-groups = ["devwheelpyodide"]
build-verbosity = 0
before-test = [
  "echo 'RUNNING PYODIDE AUDITWHEEL CHECKS'",
  "echo 'auditwheel show results:'",
  "pyodide auditwheel show -r {wheel}",
  "echo 'auditwheel imports results:'",
  "pyodide auditwheel imports --show-type {wheel}",
  "echo 'auditwheel exports results:'",
  "pyodide auditwheel exports --show-type {wheel}"
]
test-command = "python -m pytest -s -vvv --pyargs spiceypy.tests.test_wrapper --benchmark-disable"
pyodide-version = "314.0.0" 
dependency-versions = { packages = ["pyodide-build==0.35.1"] }
# disable some errors for pyodide only; SPICEYPY_PYODIDE drives the cyice-source
# exclusion override in [tool.scikit-build.overrides] above
environment = { CFLAGS="-Werror=implicit-function-declaration -Werror=incompatible-pointer-types -Werror=return-type", SPICEYPY_PYODIDE="1" }

