[metadata]
name = spiceypy
version = 4.0.2 
description = A Python Wrapper for the NAIF CSPICE Toolkit
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
author = Andrew Annex 
author_email = ama6fy@virginia.edu 
maintainer = Andrew Annex
maintainer_email = ama6fy@virginia.edu
license = MIT 
license_file = LICENSE
url = https://github.com/AndrewAnnex/SpiceyPy
project_urls =
    Homepage = https://github.com/AndrewAnnex/SpiceyPy
    Repository = https://github.com/AndrewAnnex/SpiceyPy 
    Documentation = https://spiceypy.readthedocs.io 
    Bug Tracker =  https://github.com/AndrewAnnex/SpiceyPy/issues
    Changelog = https://github.com/AndrewAnnex/SpiceyPy/blob/main/CHANGELOG.md
keywords = spiceypy, spice, cspice, naif, jpl, space, geometry, ephemeris
readme = README.rst 
classifiers =
     Development Status :: 5 - Production/Stable 
     Natural Language :: English 
     Topic :: Scientific/Engineering 
     Topic :: Scientific/Engineering :: Astronomy 
     License :: OSI Approved :: MIT License 
     Programming Language :: Python :: 3.6 
     Programming Language :: Python :: 3.7 
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9 
     Operating System :: MacOS :: MacOS X 
     Operating System :: POSIX :: Linux 
     Operating System :: POSIX :: BSD :: FreeBSD 
     Operating System :: Microsoft :: Windows

[options]
package_dir =
    = src
packages = find:
python_requires =  >=3.6, <4
include_package_data = True
zip_safe = False
install_requires =
    numpy>=1.17.0
tests_require = numpy>=1.17.0; pytest>=2.9.0; pandas>=0.24.0

[options.packages.find]
where = src
include = spiceypy*

[options.extras_require]
tests = numpy>=1.17.0; pytest>=2.9.0; pandas>=0.24.0
dev = numpy>=1.17.0; pytest>=2.9.0; pandas>=0.24.0; coverage>=5.1.0; codecov>=2.1.0; twine>=3.3.0; wheel; black 

[options.package_data]
* = get_spice.py, LICENSE, README.rst, *.so, *.dll, *.dylib,

[coverage:run]
relative_files = True

[coverage:paths]
source =
    src/spiceypy/
    work/SpiceyPy/SpiceyPy/
