[options]
package_dir=
    =src
packages=find:
python_requires =  >=3.6, <4
include_package_data = True
zip_safe = False
install_requires =
    numpy>=1.17.0
tests_require = numpy>=1.17.0; pytest>=7.0.0; pandas>=0.24.0

[options.packages.find]
where = src

[options.package_data]
* = get_spice.py, build_spiceypy.py, LICENSE, README.rst, *.so, *.dll, *.dylib
spiceypy = utils/*.so, utils/*.dylib, utils/*.dll

[tool.setuptools]
py-modules = ["build_spiceypy", "build_cyice"]

[tool.setuptools.cmdclass]
install = "build_spiceypy.Install"
build_py = "build_spiceypy.BuildPyCommand"
build_ext = "build_cyice.BuildCyice"
bdist_wheel = "build_spiceypy.SpiceyPyWheelBuild"

[tool.setuptools.distclass]
distclass = "build_spiceypy.SpiceyPyBinaryDistribution"

[coverage:run]
relative_files = True

[coverage:paths]
source =
    src/spiceypy/
    work/SpiceyPy/SpiceyPy/
